UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_SAP_Product_Staging__c.object
<CustomObject>
    <description>used to store data from SAP and then pushed to respective objects Product and Playbook</description>
    <fields>
        <fullName>Phoenix_Active_Discontinue__c</fullName>
        <label>Active/Discontinue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Case_Pack__c</fullName>
        <label>Case Pack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Compare_to_Brand_Name__c</fullName>
        <label>Compare to(Brand Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance_Class__c</fullName>
        <label>Controlled Substance Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance__c</fullName>
        <label>Controlled Substance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_DLS_formerly_NDC__c</fullName>
        <label>DLS( formerly NDC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dosage_Form__c</fullName>
        <label>Dosage Form</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GTIN_14__c</fullName>
        <label>GTIN 14</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Imported_or_Domestic__c</fullName>
        <label>Imported or Domestic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Sync_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sync Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Description__c</fullName>
        <inlineHelpText>Product Description in SF</inlineHelpText>
        <label>Material Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_1__c</fullName>
        <label>NDC-1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proprietary_Name_Trade_Name__c</fullName>
        <label>Proprietary Name / Trade Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_RequestJSONFromSAP__c</fullName>
        <label>RequestJSONFromSAP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Created_Date__c</fullName>
        <label>SAP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Modified_Date__c</fullName>
        <label>SAP Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Molecule_Description__c</fullName>
        <label>SAP Molecule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Number__c</fullName>
        <label>SAP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Pack_Size__c</fullName>
        <label>SAP Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Sub_Therapy_Description__c</fullName>
        <label>SAP Sub Therapy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Therapy_Description__c</fullName>
        <label>SAP Therapy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Life__c</fullName>
        <label>Shelf Life</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Strength__c</fullName>
        <label>Strength</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Th_Put_Cost__c</fullName>
        <label>Th. Put Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_UPC__c</fullName>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SAP Product Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Material_Description__c</columns>
        <columns>Phoenix_SAP_Number__c</columns>
        <columns>Phoenix_Th_Put_Cost__c</columns>
        <columns>Phoenix_WAC__c</columns>
        <columns>Phoenix_SAP_Molecule_Description__c</columns>
        <columns>Phoenix_SAP_Sub_Therapy_Description__c</columns>
        <columns>Phoenix_SAP_Therapy_Description__c</columns>
        <columns>Phoenix_SAP_Pack_Size__c</columns>
        <columns>Phoenix_Active_Discontinue__c</columns>
        <columns>Phoenix_Shelf_Life__c</columns>
        <columns>Phoenix_Imported_or_Domestic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROD-{00000000}</displayFormat>
        <label>SAP Product Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Product Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>